--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -25,19 +25,23 @@
       <button style="color: cadetblue;">hello</button>
 
     </div> -->
-    <ion-button expand="block" color="dark" class="ion-padding  "> <i class="fa fa-google icon-socialmedia col-sm-2 col-2"></i><a style="color: rgb(15, 9, 9);">Sign in with Google</a></ion-button>
-    <ion-button expand="block" color="primary" class="ion-padding "><i class="fa fa-facebook icon-socialmedia icon-facebook col-sm-2 col-2" ></i>Sign in with Facebook</ion-button>
+    <ion-button expand="block" color="dark" class="ion-padding  "> <i class="fa fa-google  col-sm-2 col-2 ion-text-left" style="color: rgb(233, 44, 44);" slot="start"></i><a style="color: rgb(15, 9, 9); font-weight:600;">Sign in with Google</a></ion-button>
+    <ion-button expand="block" color="primary" class="ion-padding "><i class="fa fa-facebook   col-sm-2 col-2" ></i>Sign in with Facebook</ion-button>
     <ion-button expand="block" color="secondary" class="ion-padding">Sign in</ion-button>
-
-    <ion-text class="whiteliner ">
+    <!-- <ion-text class="whiteliner ">
       <div class="whiteliner-or d-flex justify-content-center ion-padding">
         Or
       </div>
-    </ion-text>
-    <ion-button expand="block" color="createacc" class="ion-padding createacc" fill="outline">Create account</ion-button>
+    </ion-text> -->
+    <div class="whiteliner">
+        <ion-text class="ion-align-self-center whiteliner-or d-flex justify-content-center ion-padding ion-justify-content-center ">
+           Or
+        </ion-text>
+    </div>
+    <ion-button expand="block"  class="ion-padding createacc" >Create account</ion-button>
 
-    <ion-text class="ion-padding">
-      <p >By creating or signing into an account, you agree to our <a href="#" class="termslink">Terms of Use</a> and <a href="#" class="termslink">Privacy and Cookie Policy.</a></p>
+    <ion-text class=" ion-padding ">
+      <p class="ion-margin-horizontal	">By creating or signing into an account, you agree to our <a href="#" class="termslink">Terms of Use</a> and <a href="#" class="termslink">Privacy and Cookie Policy.</a></p>
     </ion-text>
 
     <!-- <app-explore-container name="Tab 2 page"></app-explore-container> -->
