--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -27,7 +27,9 @@
     </div> -->
     <ion-button expand="block" color="dark" class="ion-padding  "> <i class="fa fa-google  col-sm-2 col-2 ion-text-left" style="color: rgb(233, 44, 44);" slot="start"></i><a style="color: rgb(15, 9, 9); font-weight:600;">Sign in with Google</a></ion-button>
     <ion-button expand="block" color="primary" class="ion-padding "><i class="fa fa-facebook   col-sm-2 col-2" ></i>Sign in with Facebook</ion-button>
-    <ion-button expand="block" color="secondary" class="ion-padding">Sign in</ion-button>
+    <ion-button expand="block"  color="secondary" class="ion-padding"  routerLink="/new-account">Sign in</ion-button>
+
+    <!-- <ion-button expand="block"  color="secondary" class="ion-padding" (click)="signin()" routerLink="/login">Sign in</ion-button> -->
     <!-- <ion-text class="whiteliner ">
       <div class="whiteliner-or d-flex justify-content-center ion-padding">
         Or
@@ -38,9 +40,9 @@
            Or
         </ion-text>
     </div>
-    <ion-button expand="block"  class="ion-padding createacc" >Create account</ion-button>
+    <ion-button expand="block" class="ion-padding createacc"  routerLink="/signup">Create account</ion-button>
 
-    <ion-text class=" ion-padding ">
+    <ion-text class="ion-padding">
       <p class="ion-margin-horizontal	">By creating or signing into an account, you agree to our <a href="#" class="termslink">Terms of Use</a> and <a href="#" class="termslink">Privacy and Cookie Policy.</a></p>
     </ion-text>
 
