--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -109,6 +109,7 @@ ion-button.btn-sign{
 	{
 		width:90%;
 		margin: auto;
+    
 	}
 
 	.btn-signup{
@@ -196,7 +197,7 @@ ion-button.btn-sign{
 	}
 
 	.input-field:focus {
-		border: 2px solid #054D87;
+		// border: 2px solid #054D87;
 	}
 
 	.form-check-input {
@@ -211,7 +212,7 @@ ion-button.btn-sign{
 		font-weight: 400;
 		cursor: pointer;
 		position: absolute;
-		right: 5rem;
+		right: 2rem;
 		margin: 1rem 0rem;
 	}
 
